fix(interactive): disable repair wheel in coordinator dockerfile (#4517)
Fixes #4454

---------

Signed-off-by: siyuan0322 <siyuanzhang.zsy@alibaba-inc.com>

fix aocc

Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

fix installation

Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

fix linking,todo: verify correctness

Committed-by: xiaolei.zl from Dev container

impl kafka writer and parser

Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

minor fix

Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

fix

Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -377,6 +377,23 @@ jobs:
         bash hqps_adhoc_test.sh ${INTERACTIVE_WORKSPACE} graph_algo \
           ${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml
 
+    - name: Run kafka wal test
+      env:
+        GS_TEST_DIR: ${{ github.workspace }}/gstest
+      run: |
+        wget https://dlcdn.apache.org/kafka/3.9.0/kafka_2.13-3.9.0.tgz
+        tar -zxf kafka_2.13-3.9.0.tgz
+        cd kafka_2.13-3.9.0
+        KAFKA_CLUSTER_ID="$(bin/kafka-storage.sh random-uuid)"
+        bin/kafka-storage.sh format --standalone -t $KAFKA_CLUSTER_ID -c config/kraft/reconfig-server.properties
+        bin/kafka-server-start.sh config/kraft/reconfig-server.properties &
+
+        bin/kafka-topics.sh --create --topic kafka-test --bootstrap-server localhost:9092
+
+        ./tests/hqps/kafka_test localhost:902 kafka-test
+
+        pkill -f kafka-server-start.sh
+
     - name: Run Gremlin test on modern graph
       env:
         GS_TEST_DIR: ${{ github.workspace }}/gstest
