add etcd meta store impl
Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

code refactor

Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

Committed-by: xiaolei.zl from Dev container

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "flex/third_party/parallel-hashmap"]
 	path = flex/third_party/parallel-hashmap
 	url = https://github.com/greg7mdp/parallel-hashmap.git
+[submodule "flex/third_party/etcd-cpp-apiv3"]
+	path = flex/third_party/etcd-cpp-apiv3
+	url = https://github.com/etcd-cpp-apiv3/etcd-cpp-apiv3.git
+[submodule "flex/third_party/cpprestsdk"]
+	path = flex/third_party/cpprestsdk
+	url = https://github.com/microsoft/cpprestsdk.git
