--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -9,7 +9,7 @@ compute_engine:
   store:
     type: cpp-mcsr
   metadata_store:
-    type: file # file/sqlite/etcd
+    uri: file://{WORKSPACE}/METADATA # Could be file://{WORKSPACE}/METADATA or other supported storage class. WORKSPACE is the placeholder for the workspace directory.
   wal_uri: file://{GRAPH_DATA_DIR}/wal # Could be file://{GRAPH_DATA_DIR}/wal or other supported storage class. GRAPH_DATA_DIR is the placeholder for the graph data directory.
 compiler:
   planner:
