--- a/interactive_engine/benchmark/example/job_benchmark.properties
+++ b/interactive_engine/benchmark/example/job_benchmark.properties
@@ -3,7 +3,7 @@
 # For each system, starting from system.1 to system.n, the following configurations are needed:
 # name: the name of the system, e.g., GIE, KuzuDb.
 # client: the client of the system, e.g., for GIE, it can be cypher, gremlin; for KuzuDB, it should be kuzu.
-# endpoint(optional): the endpoint of the system if the sytem provides a service endpoint, e.g., for GIE gremlin, it is 127.0.0.1:8182 by default.
+# endpoint(optional): the endpoint of the system if the system provides a service endpoint, e.g., for GIE gremlin, it is 127.0.0.1:8182 by default.
 # path(optional): the path of the database of the system if the system is a local database and need to access the database by the path, e.g., for KuzuDb, it can be /path_to_db/example_db.
 # Either of endpoint or path need to be provided, depending on the access method of the system.
 system.1.name = GIE
