--- a/flex/resources/hqps/CMakeLists.txt.template
+++ b/flex/resources/hqps/CMakeLists.txt.template
@@ -9,6 +9,13 @@ project(HighQpsCodeGen
         VERSION 1.0
         LANGUAGES CXX)
 
+SET(FLEX_LABEL_TYPE "uint8_t" CACHE STRING "The label type of the graph, valid values: uint16_t, uint8_t")
+# check label_type in {uint8, uint16}
+if(NOT FLEX_LABEL_TYPE STREQUAL "uint8_t" AND NOT FLEX_LABEL_TYPE STREQUAL "uint16_t")
+    message(FATAL_ERROR "FLEX_LABEL_TYPE must be uint8 or uint16, but got ${FLEX_LABEL_TYPE}")
+endif()
+add_compile_definitions(FLEX_LABEL_TYPE=${FLEX_LABEL_TYPE})
+
 # the query name, 
 if (QUERY_NAME)
         message("Query name ${QUERY_NAME}")
