--- a/charts/graphscope-store/templates/portal/statefulset.yaml
+++ b/charts/graphscope-store/templates/portal/statefulset.yaml
@@ -107,6 +107,14 @@ spec:
               value: {{ .Values.frontend.service.gremlinPort | quote }}
             - name: GROOT_CYPHER_PORT
               value: {{ .Values.frontend.service.cypherPort | quote }}
+            - name: GROOT_FRONTEND_POD_SUFFIX
+              value: {{ printf "%s-frontend" (include "graphscope-store.name" .) }}
+            - name: GROOT_COORDINATOR_POD_SUFFIX
+              value: {{ printf "%s-coordinator" (include "graphscope-store.name" .) }}
+            - name: GROOT_PORTAAL_POD_SUFFIX
+              value: {{ printf "%s-portal" (include "graphscope-store.name" .) }}
+            - name: GROOT_STORE_POD_SUFFIX
+              value: {{ printf "%s-store" (include "graphscope-store.name" .) }}
             - name: INSTANCE_NAME
               value: {{ .Release.Name | quote }}
             - name: NAMESPACE
