support graph planner installation
Committed-by: xiaolei.zl from Dev container

--- a/interactive_engine/compiler/src/main/native/CMakeLists.txt
+++ b/interactive_engine/compiler/src/main/native/CMakeLists.txt
@@ -18,6 +18,13 @@ project(COMPILER-JNI
 
 option(BUILD_TEST "Whether to build test" ON)
 
+include(GNUInstallDirs)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-rpath,$ORIGIN")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+
+
 set(JAVA_AWT_INCLUDE_PATH NotNeeded)
 set(CMAKE_CXX_STANDARD 17)
 find_package(JNI QUIET)
@@ -58,18 +65,50 @@ protobuf_generate(APPEND_PATH
         PROTOC_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/flex/proto_generated_gie
 )
 
-add_library(ir_proto SHARED ${PROTO_SRCS_GIE})
-
-target_link_libraries(ir_proto ${Protobuf_LIBRARIES})
-
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 file(GLOB_RECURSE PLANNER_SRC_FILES "graph_planner.cc")
+list(APPEND PLANNER_SRC_FILES ${PROTO_SRCS_GIE})
 add_library(graph_planner SHARED ${PLANNER_SRC_FILES})
-target_link_libraries(graph_planner PUBLIC ir_proto ${CMAKE_JNI_LINKER_FLAGS} ${JAVA_JVM_LIBRARY} ${JNI_LIBRARIES} ${Protobuf_LIBRARIES})
+target_link_libraries(graph_planner PUBLIC ${CMAKE_JNI_LINKER_FLAGS} ${JAVA_JVM_LIBRARY} ${JNI_LIBRARIES} ${Protobuf_LIBRARIES})
 target_include_directories(graph_planner PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
 
 if (BUILD_TEST)
     add_executable(test_graph_planner test/test.cc)
     target_link_libraries(test_graph_planner PRIVATE graph_planner)
 endif()
+
+
+# Install library
+install(TARGETS graph_planner
+        EXPORT graph-planner-targets
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+)
+
+# Install headers
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/flex/
+        DESTINATION include/flex
+        FILES_MATCHING
+        FILES_MATCHING PATTERN "*.h"
+)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/graph_planner.h
+        DESTINATION include
+)
+
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/graph-planner-config.in.cmake
+               ${CMAKE_CURRENT_BINARY_DIR}/graph-planner-config.cmake @ONLY)
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/graph-planner-config-version.in.cmake
+               ${CMAKE_CURRENT_BINARY_DIR}/graph-planner-config-version.cmake @ONLY)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/graph-planner-config.cmake"
+               "${CMAKE_CURRENT_BINARY_DIR}/graph-planner-config-version.cmake"
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/graph-planner)
+ 
+install(EXPORT graph-planner-targets
+        FILE graph-planner-targets.cmake
+        NAMESPACE planner::
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/graph-planner)
