--- a/interactive_engine/compiler/src/main/native/CMakeLists.txt
+++ b/interactive_engine/compiler/src/main/native/CMakeLists.txt
@@ -18,6 +18,12 @@ project(COMPILER-JNI
 
 option(BUILD_TEST "Whether to build test" ON)
 
+include(GNUInstallDirs)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-rpath,$ORIGIN")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+
 set(JAVA_AWT_INCLUDE_PATH NotNeeded)
 set(CMAKE_CXX_STANDARD 17)
 find_package(JNI QUIET)
