--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -41,6 +41,10 @@ jobs:
         make -j$(nproc)
         make install
 
+    - name: Setup tmate session
+      if: false
+      uses: mxschmitt/action-tmate@v3
+
     - name: Build Interactive
       env:
         GIE_HOME: ${{ github.workspace }}/interactive_engine/
@@ -220,10 +224,6 @@ jobs:
       run: |
         cd ${GITHUB_WORKSPACE}/flex/tests/hqps
         bash hqps_robust_test.sh ${INTERACTIVE_WORKSPACE} ./interactive_config_test.yaml ./interactive_config_test_cbo.yaml
-
-    - name: Setup tmate session
-      if: true
-      uses: mxschmitt/action-tmate@v3
 
     - name: Sample Query test
       env:
