--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -278,17 +278,20 @@ jobs:
           --ir_conf=${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml -o=${PLUGIN_DIR} \
           --procedure_name=plus_one \
           --graph_schema_path=../interactive/examples/modern_graph/graph.yaml \
-          --procedure_desc="This is test procedure, and the input is a number, and the output is the number plus one."
+          --procedure_desc="This is test procedure, and the input is a number, and the output is the number plus one." \
+          --label_type="uint16_t"
         
         ./load_plan_and_gen.sh -e=hqps -i=../interactive/sdk/java/src/test/resources/sample_app.cc -w=/tmp/codegen \
           --ir_conf=${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml -o=${PLUGIN_DIR} \
           --procedure_name=sample_app \
-          --graph_schema_path=../interactive/examples/modern_graph/graph.yaml
+          --graph_schema_path=../interactive/examples/modern_graph/graph.yaml \
+          --label_type="uint16_t"
 
         ./load_plan_and_gen.sh -e=hqps -i=../interactive/examples/modern_graph/count_vertex_num.cypher -w=/tmp/codegen \
           --ir_conf=${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml  -o=${PLUGIN_DIR} \
           --procedure_name=count_vertex_num \
-          --graph_schema_path=../interactive/examples/modern_graph/graph.yaml
+          --graph_schema_path=../interactive/examples/modern_graph/graph.yaml \
+          --label_type="uint16_t"
         
         # Among the above procedures, the correct input format for each is:
         # count_vertex_num: () -> (num: int64), CypherProcedure.
