fix udf function configuration

--- a/interactive_engine/compiler/src/main/resources/conf/graph_functions.yaml
+++ b/interactive_engine/compiler/src/main/resources/conf/graph_functions.yaml
@@ -19,4 +19,4 @@ graph_functions:
     returns:
       - name: float
         type:
-          primitive_type: DT_FLOAT
+          primitive_type: DT_DOUBLE
